[package]
name = "vvt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8"
serde = { version = "1.0.159" , features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0.96"
